--- a/2022_OGC-CNG_GeoParquet/index.html
+++ b/2022_OGC-CNG_GeoParquet/index.html
@@ -198,6 +198,8 @@ Read full dataset (single integer column) using Python - GDAL master, pyogrio, p
 * GeoPackage: 27s (7s)
 * GeoParquet: 4.5s (55ms)
 
+(disclaimer: all benchmarks are flawed!)
+
 ---
 
 # What is GeoParquet?
