--- a/2022_OGC-CNG_GeoParquet/index.html
+++ b/2022_OGC-CNG_GeoParquet/index.html
@@ -205,7 +205,7 @@ Read full dataset (single integer column) using Python - GDAL master, pyogrio, p
 # What is GeoParquet?
 
 * GeoPandas has Parquet IO since June 2020
-* Initiave started in OGC repo (2021)
+* Initiative started in OGC repo (2021)
 * GeoParquet v0.1.0 (March 9, 2022): initial release
 * GeoParquet v0.2.0 (April 20, 2022): 3D coordinates support, geometry types, crs optional, ...
 
