Add GeoPython 2022 slides

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 <li><a href="2019_FOSS4GBE_pygeos">FOSS4G Belgium, 2019, October 24 - GEOS in the Python ecosystem</a></li>
 <li><a href="2020_GeoPython_Shapely-2.0">GeoPython, 2020, September 22 - Shapely 2.0: an improved foundation for GeoPandas and the Python geospatial ecosystem</a></li>
 <li><a href="2022_PyDataBerlin_pandas-copy-view">PyConDE/PyData Berlin, 2022, April 13 - On Blocks, Copies and Views: updating pandas' internals</a></li>
+<li><a href="2022_GeoPython_geopandas">GeoPython, 2022, June 21 - State of GeoPandas</a></li>
+
 </ul>
 </html>
