--- a/2022_GeoPython_geopandas/index.html
+++ b/2022_GeoPython_geopandas/index.html
@@ -29,7 +29,7 @@ class: center, middle
 
 # State of GeoPandas ecosystem
 
-Joris Van den Bossche &  Martin Fleischmann , GeoPython, June 21, 2022
+Joris Van den Bossche &  Martin Fleischmann, GeoPython, June 21, 2022
 
 https://github.com/jorisvandenbossche/talks/
 
@@ -39,7 +39,7 @@ https://github.com/jorisvandenbossche/talks/
 
 <img style="width: 200px; float: left; margin-right: 50px;" src="img/joris.png" />
 
-Joris Van den Bossche
+**Joris Van den Bossche**
 
 - Background: PhD bio-science engineer, air quality research
 - pandas core dev, geopandas maintainer, scikit-learn contributor
@@ -48,7 +48,7 @@ Joris Van den Bossche
 
 <img style="width: 200px; float: left; margin-right: 50px;" src="img/martin.png" />
 
-Martin Fleischmann
+**Martin Fleischmann**
 
 * Researcher at Geographic Data Science Lab at the University of Liverpool
 * Urban morphology and geographic data science
@@ -788,7 +788,7 @@ count: false
 .center[
 ## Demo time! 
 
-See [static version](http://nbviewer.jupyter.org/gist/jorisvandenbossche/67be41a246c1281d7046b31690988321)
+See [static version](https://dask-geopandas.readthedocs.io/en/stable/guide/basic-intro.html)
 ]
 
 ---
@@ -807,7 +807,7 @@ Many areas for improvement:
 
 Young project, but ready to be tried out!
 
----
+<!-- ---
 
 # Contributions welcome!
 
@@ -815,12 +815,10 @@ Young project, but ready to be tried out!
 
 ### Extend functionality
 
-### Contribute code: https://github.com/geopandas/geopandas
+### Contribute code: https://github.com/geopandas/geopandas -->
 
 ---
 class: middle
-
-http://geopandas.readthedocs.io
 
 # Thanks for listening!
 
