--- a/2022_GeoPython_geopandas/index.html
+++ b/2022_GeoPython_geopandas/index.html
@@ -498,7 +498,7 @@ Use through familiar GeoPandas API (>= 0.11):
 
 ```python
 gdf = pyogrio.read_file("path/to/file", engine="pyogrio")
-gdf.to_file("path/to_file", driver="pyogrio")
+gdf.to_file("path/to_file", engine="pyogrio")
 ```
 
 Goal to make `engine="pyogrio"` the default in the future.
@@ -830,7 +830,7 @@ class: middle
 - [jorisvandenbossche.github.io/talks/2022_GeoPython_geopandas](
     http://jorisvandenbossche.github.io/talks/2022_GeoPython_geopandas)
 
-http://geopandas.readthedocs.io
+http://geopandas.org
 
 
 
