add slides for FOSS4G geopandas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <li><a href="2020_GeoPython_Shapely-2.0">GeoPython, 2020, September 22 - Shapely 2.0: an improved foundation for GeoPandas and the Python geospatial ecosystem</a></li>
 <li><a href="2022_PyDataBerlin_pandas-copy-view">PyConDE/PyData Berlin, 2022, April 13 - On Blocks, Copies and Views: updating pandas' internals</a></li>
 <li><a href="2022_GeoPython_geopandas">GeoPython, 2022, June 21 - State of GeoPandas</a></li>
+<li><a href="2022_FOSS4G_geopandas">FOSS4G, 2022, August 24 - State of GeoPandas</a></li>
 
 </ul>
 </html>
