update dask image

--- a/2022_FOSS4G_geopandas/index.html
+++ b/2022_FOSS4G_geopandas/index.html
@@ -1105,12 +1105,12 @@ class: center, middle
 Image from https://docs.dask.org/en/stable/
 ---
 
-.center[
-![:scale 70%](img/dask-dataframe.png)
-]
+class: center, middle
 
-Image from https://coiled.io/blog/spatial-join-dask-geopandas-sjoin/
+![:scale 60%](https://docs.dask.org/en/stable/_images/dask-dataframe.svg)
 
+
+Image from https://docs.dask.org/en/stable/
 ---
 
 # GeoPandas - dask bridge
