add slides for geoarrow lightning talk

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <li><a href="2022_PyDataBerlin_pandas-copy-view">PyConDE/PyData Berlin, 2022, April 13 - On Blocks, Copies and Views: updating pandas' internals</a></li>
 <li><a href="2022_GeoPython_geopandas">GeoPython, 2022, June 21 - State of GeoPandas</a></li>
 <li><a href="2022_FOSS4G_geopandas">FOSS4G, 2022, August 24 - State of GeoPandas</a></li>
+<li><a href="2022_FOSS4G_geoarrow">FOSS4G, 2022, August 25 - Geospatial and Apache Arrow: accelerating geospatial data exchange and compute</a></li>
 
 </ul>
 </html>
