--- a/2022_FOSS4G_geoarrow/index.html
+++ b/2022_FOSS4G_geoarrow/index.html
@@ -392,6 +392,8 @@ class: theme-green-minimal
 
 ## Want to know more?
 
+Those slides (with links): https://jorisvandenbossche.github.io/talks/2022_FOSS4G_geoarrow/
+
 Long version of this presentation at The Data Thread: https://www.youtube.com/watch?v=PbO5FVcPUIQ
 
 Blogposts:
