--- a/2022_FOSS4G_geoarrow/index.html
+++ b/2022_FOSS4G_geoarrow/index.html
@@ -8,13 +8,13 @@
     <meta name="twitter:title" content="Geospatial and Apache Arrow: accelerating geospatial data exchange and compute"/>
     <meta name="twitter:description" content="Geospatial and Apache Arrow: accelerating geospatial data exchange and compute"/>
     <meta name="twitter:url" content="https://github.com/geopandas/geo-arrow-spec"/>
-    <meta name="twitter:image" content="https://djnavarro.net/xaringan-template-voltrondata/img/title-slide-image.png"/>
+    <meta name="twitter:image" content="https://github.com/jorisvandenbossche/talks/raw/master/2022_FOSS4G_geoarrow/fig-geoarrow-hex/geoarrow-hex.png"/>
     <meta name="twitter:image:alt" content="Image showing the title slide. The title in white reads &#39;Voltron Data template for xaringan users&#39;, with &#39;by Danielle Navarro&#39; immediately underneath. The background is dark green, with the Voltron Data &#39;data lake&#39; image shown in light green below the title, and the company logo shown in light green in the top right corner"/>
     <meta name="twitter:card" content="summary"/>
     <meta property="og:title" content="Geospatial and Apache Arrow: accelerating geospatial data exchange and compute"/>
     <meta property="og:description" content="Geospatial and Apache Arrow: accelerating geospatial data exchange and compute"/>
     <meta property="og:url" content="https://github.com/geopandas/geo-arrow-spec"/>
-    <meta property="og:image" content="https://djnavarro.net/xaringan-template-voltrondata/img/title-slide-image.png"/>
+    <meta property="og:image" content="https://github.com/jorisvandenbossche/talks/raw/master/2022_FOSS4G_geoarrow/fig-geoarrow-hex/geoarrow-hex.png"/>
     <meta property="og:image:alt" content="Image showing the title slide. The title in white reads &#39;Voltron Data template for xaringan users&#39;, with &#39;by Danielle Navarro&#39; immediately underneath. The background is dark green, with the Voltron Data &#39;data lake&#39; image shown in light green below the title, and the company logo shown in light green in the top right corner"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_US"/>
