--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <li><a href="2022_GeoPython_geopandas">GeoPython, 2022, June 21 - State of GeoPandas</a></li>
 <li><a href="2022_FOSS4G_geopandas">FOSS4G, 2022, August 24 - State of GeoPandas</a></li>
 <li><a href="2022_FOSS4G_geoarrow">FOSS4G, 2022, August 25 - Geospatial and Apache Arrow: accelerating geospatial data exchange and compute</a></li>
+<li><a href="2022_FOSS4GBE_geoarrow">FOSS4G Belgium, 2022, November 17 - Geospatial and Apache Arrow: accelerating geospatial data exchange and compute</a></li>
 
 </ul>
 </html>
