add links for geoarrow

--- a/2022_FOSS4GBE_geoarrow/index.html
+++ b/2022_FOSS4GBE_geoarrow/index.html
@@ -545,6 +545,11 @@ It's fast to iterate over geometry arranged in buffers designed for random acces
 ## 3 length_wkb       240.3ms  240.5ms      4.15    3.69MB        0
 ```
 
+--
+count: false
+
+Experiments in C++ (https://github.com/geoarrow/geoarrow-cpp), Julia, Rust (https://github.com/geopolars/geopolars), ... <br>
+Compatible format used in RAPIDS cuSpatial (https://github.com/rapidsai/cuspatial), datashader (https://github.com/holoviz/datashader/), ...
 
 ---
 
