add link slides

--- a/2022_FOSS4GBE_geoarrow/index.html
+++ b/2022_FOSS4GBE_geoarrow/index.html
@@ -49,8 +49,7 @@ class: title-slide, theme-green-maximal  <!-- title slide style -->
 
 .center[.midi[Joris Van den Bossche and Dewey Dunnington]] <!-- author, one line -->
 .center[.midi[Voltron Data]] <!-- general info, one line -->
-
-
+.center[https://jorisvandenbossche.github.io/talks/]
 
 <!--
 font-size classes (relative to normal 100%)
