add slides PyData Global

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <li><a href="2022_FOSS4G_geopandas">FOSS4G, 2022, August 24 - State of GeoPandas</a></li>
 <li><a href="2022_FOSS4G_geoarrow">FOSS4G, 2022, August 25 - Geospatial and Apache Arrow: accelerating geospatial data exchange and compute</a></li>
 <li><a href="2022_FOSS4GBE_geoarrow">FOSS4G Belgium, 2022, November 17 - Geospatial and Apache Arrow: accelerating geospatial data exchange and compute</a></li>
+<li><a href="2022_PyDataGlobal_pandas-copy-view">PyData Global 2022 - On Copies and Views: updating pandas' internals</a></li>
 
 </ul>
 </html>
