Add GeoPython Shapely 2.0 slides

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <li><a href="2022_FOSS4G_geoarrow">FOSS4G, 2022, August 25 - Geospatial and Apache Arrow: accelerating geospatial data exchange and compute</a></li>
 <li><a href="2022_FOSS4GBE_geoarrow">FOSS4G Belgium, 2022, November 17 - Geospatial and Apache Arrow: accelerating geospatial data exchange and compute</a></li>
 <li><a href="2022_PyDataGlobal_pandas-copy-view">PyData Global 2022 - On Copies and Views: updating pandas' internals</a></li>
-
+<li><a href="2023_GeoPython_Shapely-2.0">GeoPython 2023, March 7 - Shapely 2.0</a></li>
 </ul>
 </html>
