--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <li><a href="2022_FOSS4GBE_geoarrow">FOSS4G Belgium, 2022, November 17 - Geospatial and Apache Arrow: accelerating geospatial data exchange and compute</a></li>
 <li><a href="2022_PyDataGlobal_pandas-copy-view">PyData Global 2022 - On Copies and Views: updating pandas' internals</a></li>
 <li><a href="2023_GeoPython_Shapely-2.0">GeoPython 2023, March 7 - Shapely 2.0</a></li>
+<li><a href="2023_PyDataBerlin_Arrow">PyConDE/PyData Berlin, 2023, April 19 - Apache Arrow: connecting and accelerating dataframe libraries across the PyData ecosystem</a></li>
 </ul>
 </html>
