--- a/2023_PyDataBerlin_Arrow/index.html
+++ b/2023_PyDataBerlin_Arrow/index.html
@@ -251,6 +251,12 @@ Systems that do not directly use "Arrow" libraries, but are (very / fully) compa
   ![](img/velox-logo.svg)
 ]
 
+???
+
+Can easily be integrated into your workflows because of Arrow compatibility
+
+whether its the arrow projects itself or those external ones
+
 ---
 class: theme-light-logo
 
@@ -542,7 +548,7 @@ A single API for getting Apache Arrow data in and out of different databases.
 
 --
 
-ADBC defines a common client API that can be implemented by different drivers (example: Flight SQL, Spark, DuckDB, SQLite, PostgreSQL...)
+ADBC defines a common client API that can be implemented by different drivers (example: Flight SQL, Spark, DuckDB, SQLite, PostgreSQL, JDBC, ...)
 
 ADBC doesn't intend to replace JDBC or ODBC for general use, just for applications that want bulk columnar data access.
 
