add slides for PyData Amsterdam

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <li><a href="2022_PyDataGlobal_pandas-copy-view">PyData Global 2022 - On Copies and Views: updating pandas' internals</a></li>
 <li><a href="2023_GeoPython_Shapely-2.0">GeoPython 2023, March 7 - Shapely 2.0</a></li>
 <li><a href="2023_PyDataBerlin_Arrow">PyConDE/PyData Berlin, 2023, April 19 - Apache Arrow: connecting and accelerating dataframe libraries across the PyData ecosystem</a></li>
+<li><a href="2023_PyDataAmsterdam_pandas-pdeps">PyData Amsterdam, 2023, September 14 - What the PDEP? An overview of some upcoming pandas changes</a></li>
 </ul>
 </html>
