update last slide

--- a/2024_PyDataParis_Arrow/index.html
+++ b/2024_PyDataParis_Arrow/index.html
@@ -941,18 +941,17 @@ with adbc_driver_sqlite.dbapi.connect("file:db.sqlite") as conn:
 
 ---
 
-class: theme-green-maximal
+class: left, middle, theme-voltron-title-slide-light
 
 ## Thanks for listening! Questions?
 
 Those slides:
 
 - https://github.com/jorisvandenbossche/talks/
-- http://jorisvandenbossche.github.io/talks/2023_PyDataBerlin_Arrow
-
+- http://jorisvandenbossche.github.io/talks/2024_PyDataParis_Arrow
 
 .center[
-<a href="https://twitter.com/jorisvdbossche" style="color: var(--text-white)"><img src="img/icon_twitter.svg" alt="Twitter logo" class="icon"> twitter.com/jorisvdbossche</a>
+<a href="https://fosstodon.org/@jorisvandenbossche" style="color: var(--text-white)"><img src="img/mastodon-svgrepo-com.svg" width="28px" alt="Twitter logo" class="icon"> @jorisvandenbossche@fosstodon.org</a><br>
 <a href="https://github.com/jorisvandenbossche" style="color: var(--text-white)"><img src="img/icon_github.svg" alt="Github logo"  class="icon"> github.com/jorisvandenbossche</a>
 ]
 
