--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 <li><a href="2023_PyDataBerlin_Arrow">PyConDE/PyData Berlin, 2023, April 19 - Apache Arrow: connecting and accelerating dataframe libraries across the PyData ecosystem</a></li>
 <li><a href="2023_PyDataAmsterdam_pandas-pdeps">PyData Amsterdam, 2023, September 14 - What the PDEP? An overview of some upcoming pandas changes</a></li>
 <li><a href="2024_PyDataParis_Arrow">PyData Paris, 2024, September 25 - The expanding Apache Arrow universe - standardizing and accelerating tabular data access and interchange</a></li>
+<li><a href="2025_GeoPython_spherely">GeoPython 2025 - GeoPython 2025 - The earth is no longer flat! - Introducing Spherely</a></li>
 </ul>
 </html>
